--- a/index.html
+++ b/index.html
@@ -1,11 +1,59 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
-</head>
-<body>
-  
-</body>
+<html lang="fa" dir="rtl">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>کتابخانه شخصی - مدیریت کتاب‌ها</title>
+    <link rel="stylesheet" href="./style/style.css" />
+  </head>
+  <body>
+    <div class="container">
+      <!-- --------------------- Header --------------------- -->
+      <header id="header">
+        <!-- --------------------- Header Top Wrapper --------------------- -->
+        <div class="header__top-wrapper">
+          <h1 class="header__title">📚 کتابخانه شخصی</h1>
+          <p class="header__caption">
+            کتابخانه‌ای هوشمند برای مدیریت و کنترل آسان کتاب‌هایت، تنها با چند
+            کلیک⚡
+          </p>
+        </div>
+        <!-- --------------------- Header Center Wrapper --------------------- -->
+        <div class="header__center-wrapper">
+          <!-- --------------------- Header status cards --------------------- -->
+          <div class="header__stats-cards">
+            <div class="glass-card">
+              <span class="header__books-count">0</span>
+              <p>کل کتاب‌ها</p>
+            </div>
+            <div class="glass-card">
+              <span class="header__new-count">0</span>
+              <p>کتاب‌های جدید</p>
+            </div>
+            <div class="glass-card">
+              <span class="header__reading-count">0</span>
+              <p>در حال خواندن</p>
+            </div>
+            <div class="glass-card">
+              <span class="header__read-count">0</span>
+              <p>خوانده شده</p>
+            </div>
+          </div>
+          <!-- --------------------- Header status Button --------------------- -->
+          <button class="glass-card header__create-btn">
+            ➕ افزودن کتاب جدید
+          </button>
+        </div>
+        <!-- --------------------- Header Bottom Wrapper --------------------- -->
+        <div class="header__bottom-wrapper">
+          <!-- --------------------- Header Filter Btns --------------------- -->
+          <button class="header__filter-btn glass-card active">همه کتاب‌ها</button>
+          <button class="header__filter-btn glass-card">خوانده شده</button>
+          <button class="header__filter-btn glass-card">درحال خواندن</button>
+          <button class="header__filter-btn glass-card">کتاب‌های جدید</button>
+        </div>
+      </header>
+    </div>
+    <script src="./js/app.js"></script>
+  </body>
 </html>
