feat: complete main empty state section in HTML & CSS

--- a/index.html
+++ b/index.html
@@ -47,12 +47,23 @@
         <!-- --------------------- Header Bottom Wrapper --------------------- -->
         <div class="header__bottom-wrapper">
           <!-- --------------------- Header Filter Btns --------------------- -->
-          <button class="header__filter-btn glass-card active">همه کتاب‌ها</button>
+          <button class="header__filter-btn glass-card active">
+            همه کتاب‌ها
+          </button>
           <button class="header__filter-btn glass-card">خوانده شده</button>
           <button class="header__filter-btn glass-card">درحال خواندن</button>
           <button class="header__filter-btn glass-card">کتاب‌های جدید</button>
         </div>
       </header>
+      <!-- --------------------- Main --------------------- -->
+      <main id="main">
+        <!-- --------------------- Main Empty State --------------------- -->
+        <div class="main__empty-state">
+          <span>📖</span>
+          <h3 class="main__title">کتابخانه خالی است</h3>
+          <p class="main__caption">اولین کتاب خود را اضافه کنید</p>
+        </div>
+      </main>
     </div>
     <script src="./js/app.js"></script>
   </body>
