--- a/index.html
+++ b/index.html
@@ -106,8 +106,8 @@
         xmlns="http://www.w3.org/2000/svg"
         x="0px"
         y="0px"
-        width="80"
-        height="80"
+        width="100%"
+        height="100%"
         viewBox="0 0 48 48"
         id="icon-del-form"
       >
