feat: render books dynamically from db.json and setup initial fetch flow
- moved book rendering fully into JS (removed static <article> markup from HTML)
- replaced static book HTML with dynamic  function
- fetch books from db.json on app load and render them into DOM
- show empty state when no books exist
- unified status mapping for both Persian labels and internal english keys
- prepared setup for next steps (dynamic status/score styling)

--- a/index.html
+++ b/index.html
@@ -240,54 +240,7 @@
         </section>
         <!-- --------------------- Main Books --------------------- -->
         <section class="main__books">
-          <article class="main-book">
-            <!-- --------------------- Main Book header --------------------- -->
-            <div class="main-book__header">
-              <h3 class="main-book__header-text">کلیات شمس تبریزی</h3>
-              <div class="main-book__header-icons">
-                <svg class="main-book__del-icon">
-                  <linearGradient
-                    x1="64.111"
-                    y1="89.966"
-                    x2="64.111"
-                    y2="147.628"
-                    id="IconifyId17ecdb2904d178eab21434"
-                    gradientUnits="userSpaceOnUse"
-                  >
-                    <stop offset="0" stop-color="#82afc1" />
-                    <stop offset="1" stop-color="#2f7889" />
-                  </linearGradient>
-                  <radialGradient
-                    cx="65.53"
-                    cy="12.998"
-                    r="52.279"
-                    id="IconifyId17ecdb2904d178eab21435"
-                    gradientUnits="userSpaceOnUse"
-                  >
-                    <stop offset=".722" stop-color="#94d1e0" />
-                    <stop offset="1" stop-color="#94d1e0" stop-opacity="0" />
-                  </radialGradient>
-                  <use href="#icon-delete"></use>
-                </svg>
-                <svg class="main-book__edit-icon">
-                  <use href="#icon-edit"></use>
-                </svg>
-              </div>
-            </div>
-            <!-- --------------------- Main Book Author --------------------- -->
-            <div class="main-book__author">
-              نویسنده: <span class="main-book__author-name">مولانا</span>
-            </div>
-            <!-- --------------------- Main Book Bottom Wrapper --------------------- -->
-            <div class="main-book__bottom-wrapper">
-              <p class="main-book__status">درحال خواندن</p>
-              <div class="main-book__score">
-                <svg class="main-book__icon-star">
-                  <use href="#icon-star"></use>
-                </svg>
-              </div>
-            </div>
-          </article>
+          <!-- Load From Js -->
         </section>
       </main>
     </div>
