Implement setToastMessage function to show success and error messages
- Handle success and error toast types
- Insert toast template dynamically via function instead of HTML
- Auto-remove toast after 5 seconds

--- a/index.html
+++ b/index.html
@@ -308,19 +308,8 @@
         </div>
       </section>
     </div>
-    <section class="toast-container hidden">
-      <div class="toast toast-success">
-        <svg>
-          <use href="#icon-success"></use>
-        </svg>
-        <p class="toast__message"> کتاب شما با موفقیت حذف شد</p>
-      </div>
-      <div class="toast toast-error">
-        <svg>
-          <use href="#icon-del-form"></use>
-        </svg>
-        <p class="toast__message"> لطفا فرم را کامل کنید</p>
-      </div>
+    <section class="toast-container">
+      <!-- Load From Js -->
     </section>
     <script src="./js/app.js"></script>
   </body>
