--- a/index.html
+++ b/index.html
@@ -232,6 +232,19 @@
       </header>
       <!-- --------------------- Main --------------------- -->
       <main id="main">
+        <!-- --------------------- For Pre Login And User Registration --------------------- -->
+        <section class="main__auth-required">
+          <h1 class="main__header">
+            برای استفاده از این کتابخانه ابتدا باید ثبت‌نام کنید یا اگر حساب
+            دارید وارد شوید
+          </h1>
+          <div class="main__btns">
+            <button class="btn-login glass-card" type="button">ورود</button>
+            <button class="btn-signup glass-card" type="button">
+              ثبت‌ نام
+            </button>
+          </div>
+        </section>
         <!-- --------------------- Main Empty State --------------------- -->
         <section class="main__empty-state hidden">
           <span>📖</span>
@@ -264,37 +277,42 @@
               maxlength="30"
               name="form__title"
               id="form__title"
-              />
+            />
 
             <div>
               <label for="form__author">نویسنده</label>
               <p><span class="modal-screen__maxlength-author">0</span>/30</p>
             </div>
             <input
-            maxlength="30"
-            class="glass-card"
-            type="text"
-            name="form__author"
-            id="form__author"
+              maxlength="30"
+              class="glass-card"
+              type="text"
+              name="form__author"
+              id="form__author"
             />
-            
+
             <label for="form__status">وضعیت</label>
-            <select class="glass-card" name="form__status" value="" id="form__status">
+            <select
+              class="glass-card"
+              name="form__status"
+              value=""
+              id="form__status"
+            >
               <option value="new">کتاب جدید</option>
               <option value="reading">درحال خواندن</option>
               <option value="done">خوانده شده</option>
             </select>
-            
+
             <label for="form__score">امتیاز</label>
             <input
-            max="5"
-            min="1"
-            value="1"
-            class="glass-card"
-            type="number"
-            name="form__score"
-            id="form__score"
-            placeholder="امتیاز از 1 تا 5 "
+              max="5"
+              min="1"
+              value="1"
+              class="glass-card"
+              type="number"
+              name="form__score"
+              id="form__score"
+              placeholder="امتیاز از 1 تا 5 "
             />
           </form>
           <p class="modal-screen__body-text hidden">
@@ -311,6 +329,6 @@
     <section class="toast-container">
       <!-- Load From Js -->
     </section>
-    <script src="./js/app.js"></script>
+    <!-- <script src="./js/app.js"></script> -->
   </body>
 </html>
