Add login/signup form to modal-screen with full styling and responsive layout

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   </head>
   <body>
     <svg style="display: none">
+      <!-- --------------------- Icon Edit --------------------- -->
       <symbol id="icon-edit" viewBox="0 0 58.985 58.985">
         <polygon
           style="fill: #e0a370"
@@ -46,14 +47,14 @@
           d="M1,58.985c-0.256,0-0.512-0.098-0.707-0.293c-0.391-0.391-0.391-1.023,0-1.414l0.985-0.985 c0.391-0.391,1.023-0.391,1.414,0s0.391,1.023,0,1.414l-0.985,0.985C1.512,58.888,1.256,58.985,1,58.985z"
         ></path>
       </symbol>
-
+      <!-- --------------------- Icon Star --------------------- -->
       <symbol id="icon-star" viewBox="0 -0.5 32 32">
         <path
           d="M16.0005 0L21.4392 9.27275L32.0005 11.5439L24.8005 19.5459L25.889 30.2222L16.0005 25.895L6.11194 30.2222L7.20049 19.5459L0.000488281 11.5439L10.5618 9.27275L16.0005 0Z"
           fill="#FFCB45"
         ></path>
       </symbol>
-
+      <!-- --------------------- Icon Delete --------------------- -->
       <symbol
         id="icon-delete"
         xmlns="http://www.w3.org/2000/svg"
@@ -101,7 +102,7 @@
           />
         </g>
       </symbol>
-
+      <!-- --------------------- Icon Del removeModal --------------------- -->
       <symbol
         xmlns="http://www.w3.org/2000/svg"
         x="0px"
@@ -124,7 +125,7 @@
           d="M32.484,29.656l-2.828,2.828l-14.14-14.14l2.828-2.828L32.484,29.656z"
         ></path>
       </symbol>
-
+      <!-- --------------------- Icon Success --------------------- -->
       <symbol
         xmlns="http://www.w3.org/2000/svg"
         xmlns:xlink="http://www.w3.org/1999/xlink"
@@ -180,6 +181,187 @@
             stroke-linecap="round"
           />
         </g>
+      </symbol>
+      <!-- --------------------- Icon Username --------------------- -->
+      <symbol
+        id="icon-username"
+        xmlns="http://www.w3.org/2000/svg"
+        width="100%"
+        height="100%"
+        viewBox="0 0 24 24"
+        fill="none"
+      >
+        <path
+          d="M12.1992 12C14.9606 12 17.1992 9.76142 17.1992 7C17.1992 4.23858 14.9606 2 12.1992 2C9.43779 2 7.19922 4.23858 7.19922 7C7.19922 9.76142 9.43779 12 12.1992 12Z"
+          stroke="currentColor"
+          stroke-width="1.5"
+          stroke-linecap="round"
+          stroke-linejoin="round"
+        />
+        <path
+          d="M3 22C3.57038 20.0332 4.74796 18.2971 6.3644 17.0399C7.98083 15.7827 9.95335 15.0687 12 15C16.12 15 19.63 17.91 21 22"
+          stroke="currentColor"
+          stroke-width="1.5"
+          stroke-linecap="round"
+          stroke-linejoin="round"
+        />
+      </symbol>
+      <!-- --------------------- Icon Show --------------------- -->
+      <symbol
+        id="icon-show"
+        xmlns="http://www.w3.org/2000/svg"
+        xmlns:cc="http://creativecommons.org/ns#"
+        xmlns:dc="http://purl.org/dc/elements/1.1/"
+        xmlns:rdf="http://www.w3.org/1999/02/22-rdf-syntax-ns#"
+        xmlns:svg="http://www.w3.org/2000/svg"
+        width="100%"
+        height="100%"
+        viewBox="0 0 24 24"
+        version="1.1"
+      >
+        <defs id="defs2" />
+
+        <g id="layer1">
+          <path
+            d="M 12 4 C 8.6666667 4 5.7335794 5.6316279 3.6191406 7.3496094 C 2.5619212 8.2086001 1.7059096 9.0941755 1.09375 9.859375 C 0.78767021 10.241975 0.54228306 10.592509 0.35742188 10.916016 C 0.17256067 11.239523 3.7007434e-17 11.458333 0 12 C 0 12.541667 0.17256067 12.760477 0.35742188 13.083984 C 0.54228307 13.407491 0.78767021 13.758025 1.09375 14.140625 C 1.7059096 14.905824 2.5619212 15.7914 3.6191406 16.650391 C 5.7335794 18.368372 8.6666667 20 12 20 C 15.333333 20 18.266421 18.368372 20.380859 16.650391 C 21.438079 15.7914 22.29409 14.905824 22.90625 14.140625 C 23.21233 13.758025 23.457717 13.407491 23.642578 13.083984 C 23.827439 12.760477 24 12.541667 24 12 C 24 11.458333 23.827439 11.239523 23.642578 10.916016 C 23.457717 10.592509 23.21233 10.241975 22.90625 9.859375 C 22.29409 9.0941755 21.438079 8.2086001 20.380859 7.3496094 C 18.266421 5.6316279 15.333333 4 12 4 z M 12 6 C 14.666667 6 17.233579 7.3683721 19.119141 8.9003906 C 20.061921 9.6663999 20.83091 10.468324 21.34375 11.109375 C 21.60017 11.4299 21.792283 11.712179 21.904297 11.908203 C 21.926717 11.947439 21.926155 11.965225 21.939453 12 C 21.926155 12.034775 21.926717 12.052561 21.904297 12.091797 C 21.792283 12.287821 21.60017 12.5701 21.34375 12.890625 C 20.83091 13.531676 20.061921 14.3336 19.119141 15.099609 C 17.233579 16.631628 14.666667 18 12 18 C 9.3333333 18 6.7664206 16.631628 4.8808594 15.099609 C 3.9380788 14.3336 3.1690904 13.531676 2.65625 12.890625 C 2.3998298 12.5701 2.2077169 12.287821 2.0957031 12.091797 C 2.0732826 12.052561 2.073845 12.034775 2.0605469 12 C 2.073845 11.965225 2.0732826 11.947439 2.0957031 11.908203 C 2.2077169 11.712179 2.3998298 11.4299 2.65625 11.109375 C 3.1690904 10.468324 3.9380788 9.6663999 4.8808594 8.9003906 C 6.7664206 7.3683721 9.3333333 6 12 6 z M 11.939453 8 A 4 4 0 0 0 8 12 A 4 4 0 0 0 12 16 A 4 4 0 0 0 16 12 A 4 4 0 0 0 15.822266 10.824219 A 2 2 0 0 1 14 12 A 2 2 0 0 1 12 10 A 2 2 0 0 1 13.177734 8.1777344 A 4 4 0 0 0 12 8 A 4 4 0 0 0 11.939453 8 z "
+            id="path6180"
+            style="
+              color: #fff;
+              font-style: normal;
+              font-variant: normal;
+              font-weight: normal;
+              font-stretch: normal;
+              font-size: medium;
+              line-height: normal;
+              font-family: sans-serif;
+              font-variant-ligatures: normal;
+              font-variant-position: normal;
+              font-variant-caps: normal;
+              font-variant-numeric: normal;
+              font-variant-alternates: normal;
+              font-variant-east-asian: normal;
+              font-feature-settings: normal;
+              font-variation-settings: normal;
+              text-indent: 0;
+              text-align: start;
+              text-decoration: none;
+              text-decoration-line: none;
+              text-decoration-style: solid;
+              text-decoration-color: #fff;
+              letter-spacing: normal;
+              word-spacing: normal;
+              text-transform: none;
+              writing-mode: lr-tb;
+              direction: ltr;
+              text-orientation: mixed;
+              dominant-baseline: auto;
+              baseline-shift: baseline;
+              text-anchor: start;
+              white-space: normal;
+              shape-margin: 0;
+              inline-size: 0;
+              clip-rule: nonzero;
+              display: inline;
+              overflow: visible;
+              visibility: visible;
+              isolation: auto;
+              mix-blend-mode: normal;
+              color-interpolation-filters: linearRGB;
+              vector-effect: none;
+              fill: #fff;
+              fill-opacity: 1;
+              fill-rule: nonzero;
+              stroke: none;
+              stroke-width: 2;
+              stroke-linecap: round;
+              stroke-linejoin: round;
+              stroke-miterlimit: 4;
+              stroke-dasharray: none;
+              stroke-dashoffset: 0;
+              stroke-opacity: 1;
+              image-rendering: auto;
+              shape-rendering: auto;
+              text-rendering: auto;
+              enable-background: accumulate;
+              stop-color: #fff;
+              stop-opacity: 1;
+              opacity: 1;
+            "
+          />
+        </g>
+      </symbol>
+      <!-- --------------------- Icon Hidden --------------------- -->
+      <symbol
+        id="icon-hidden"
+        xmlns="http://www.w3.org/2000/svg"
+        xmlns:cc="http://creativecommons.org/ns#"
+        xmlns:dc="http://purl.org/dc/elements/1.1/"
+        xmlns:rdf="http://www.w3.org/1999/02/22-rdf-syntax-ns#"
+        xmlns:svg="http://www.w3.org/2000/svg"
+        width="100%"
+        height="100%"
+        viewBox="0 0 24 24"
+        version="1.1"
+      >
+
+          <path
+            d="M 20.029297 3 A 1 1 0 0 0 19.292969 3.2929688 L 17.257812 5.328125 C 15.687708 4.5455983 13.912737 4 12 4 C 8.6666667 4 5.7335794 5.6316279 3.6191406 7.3496094 C 2.5619212 8.2086001 1.7059096 9.0941755 1.09375 9.859375 C 0.78767021 10.241975 0.54228306 10.592509 0.35742188 10.916016 C 0.17256067 11.239523 3.7007434e-17 11.458333 0 12 C 0 12.541667 0.17256067 12.760477 0.35742188 13.083984 C 0.54228307 13.407491 0.78767021 13.758025 1.09375 14.140625 C 1.7059096 14.905824 2.5619212 15.7914 3.6191406 16.650391 C 4.0317573 16.985642 4.4832215 17.313668 4.9550781 17.630859 L 3.2929688 19.292969 A 1 1 0 0 0 3.2929688 20.707031 A 1 1 0 0 0 4.7070312 20.707031 L 6.7421875 18.671875 C 8.3122921 19.454402 10.087263 20 12 20 C 15.333333 20 18.266421 18.368372 20.380859 16.650391 C 21.438079 15.7914 22.29409 14.905824 22.90625 14.140625 C 23.21233 13.758025 23.457717 13.407491 23.642578 13.083984 C 23.827439 12.760477 24 12.541667 24 12 C 24 11.458333 23.827439 11.239523 23.642578 10.916016 C 23.457717 10.592509 23.21233 10.241975 22.90625 9.859375 C 22.29409 9.0941755 21.438079 8.2086001 20.380859 7.3496094 C 19.968243 7.0143584 19.516778 6.6863317 19.044922 6.3691406 L 20.707031 4.7070312 A 1 1 0 0 0 20.707031 3.2929688 A 1 1 0 0 0 20.029297 3 z M 12 6 C 13.296769 6 14.567291 6.3273006 15.75 6.8359375 L 12.068359 10.517578 A 2 2 0 0 1 12 10 A 2 2 0 0 1 13.177734 8.1777344 A 4 4 0 0 0 12 8 A 4 4 0 0 0 11.939453 8 A 4 4 0 0 0 8 12 A 4 4 0 0 0 8.5546875 14.03125 L 6.3984375 16.1875 C 5.8572135 15.84669 5.3474521 15.478716 4.8808594 15.099609 C 3.9380788 14.3336 3.1690904 13.531676 2.65625 12.890625 C 2.3998298 12.5701 2.2077169 12.287821 2.0957031 12.091797 C 2.0732826 12.052561 2.073845 12.034775 2.0605469 12 C 2.073845 11.965225 2.0732826 11.947439 2.0957031 11.908203 C 2.2077169 11.712179 2.3998298 11.4299 2.65625 11.109375 C 3.1690904 10.468324 3.9380788 9.6663999 4.8808594 8.9003906 C 6.7664206 7.3683721 9.3333333 6 12 6 z M 17.601562 7.8125 C 18.142787 8.1533101 18.652548 8.5212841 19.119141 8.9003906 C 20.061921 9.6663999 20.83091 10.468324 21.34375 11.109375 C 21.60017 11.4299 21.792283 11.712179 21.904297 11.908203 C 21.926717 11.947439 21.926155 11.965225 21.939453 12 C 21.926155 12.034775 21.926717 12.052561 21.904297 12.091797 C 21.792283 12.287821 21.60017 12.5701 21.34375 12.890625 C 20.83091 13.531676 20.061921 14.3336 19.119141 15.099609 C 17.233579 16.631628 14.666667 18 12 18 C 10.703231 18 9.4327086 17.672699 8.25 17.164062 L 9.96875 15.445312 A 4 4 0 0 0 12 16 A 4 4 0 0 0 16 12 A 4 4 0 0 0 15.822266 10.824219 A 2 2 0 0 1 14 12 A 2 2 0 0 1 13.482422 11.931641 L 17.601562 7.8125 z "
+            id="circle2141"
+            style="
+              fill: #ffffff;
+              stroke: none;
+              stroke-width: 2;
+              stroke-linecap: round;
+              stroke-linejoin: round;
+              stroke-miterlimit: 4;
+              stroke-dasharray: none;
+            "
+          />
+      </symbol>
+      <!-- --------------------- Icon Email --------------------- -->
+      <symbol
+        id="icon-email"
+        xmlns="http://www.w3.org/2000/svg"
+        xmlns:xlink="http://www.w3.org/1999/xlink"
+        width="100%"
+        height="100%"
+        viewBox="0 -2.5 20 20"
+        version="1.1"
+      >
+        <g
+          id="Page-1"
+          stroke="none"
+          stroke-width="1"
+          fill="none"
+          fill-rule="evenodd"
+        >
+          <g
+            id="Dribbble-Light-Preview"
+            transform="translate(-300.000000, -922.000000)"
+            fill="currentColor"
+          >
+            <g id="icons" transform="translate(56.000000, 160.000000)">
+              <path
+                d="M262,764.291 L254,771.318 L246,764.281 L246,764 L262,764 L262,764.291 Z M246,775 L246,766.945 L254,773.98 L262,766.953 L262,775 L246,775 Z M244,777 L264,777 L264,762 L244,762 L244,777 Z"
+                id="email-[#1573]"
+              ></path>
+            </g>
+          </g>
+        </g>
+      </symbol>
+      <!-- --------------------- Icon Phone --------------------- -->
+      <symbol
+        id="icon-phone"
+        xmlns="http://www.w3.org/2000/svg"
+        fill="currentColor"
+        width="100%"
+        height="100%"
+        viewBox="0 0 32 32"
+        version="1.1"
+      >
+        <path
+          d="M0 10.375c0 0.938 0.344 1.969 0.781 3.063s1 2.125 1.438 2.906c1.188 2.063 2.719 4.094 4.469 5.781s3.813 3.094 6.125 3.938c1.344 0.531 2.688 1.125 4.188 1.125 0.75 0 1.813-0.281 2.781-0.688 0.938-0.406 1.781-1.031 2.094-1.781 0.125-0.281 0.281-0.656 0.375-1.094 0.094-0.406 0.156-0.813 0.156-1.094 0-0.156 0-0.313-0.031-0.344-0.094-0.188-0.313-0.344-0.563-0.5-0.563-0.281-0.656-0.375-1.5-0.875-0.875-0.5-1.781-1.063-2.563-1.469-0.375-0.219-0.625-0.313-0.719-0.313-0.5 0-1.125 0.688-1.656 1.438-0.563 0.75-1.188 1.438-1.625 1.438-0.219 0-0.438-0.094-0.688-0.25s-0.5-0.281-0.656-0.375c-2.75-1.563-4.594-3.406-6.156-6.125-0.188-0.313-0.625-0.969-0.625-1.313 0-0.406 0.563-0.875 1.125-1.375 0.531-0.469 1.094-1.031 1.094-1.719 0-0.094-0.063-0.375-0.188-0.781-0.281-0.813-0.656-1.75-0.969-2.656-0.156-0.438-0.281-0.75-0.313-0.906-0.063-0.094-0.094-0.219-0.125-0.375s-0.094-0.281-0.125-0.406c-0.094-0.281-0.25-0.5-0.406-0.625-0.156-0.063-0.531-0.156-0.906-0.188-0.375 0-0.813-0.031-1-0.031-0.094 0-0.219 0-0.344 0.031h-0.406c-1 0.438-1.719 1.313-2.25 2.344-0.5 1.031-0.813 2.188-0.813 3.219z"
+        />
       </symbol>
     </svg>
     <div class="container">
@@ -257,16 +439,20 @@
         </section>
       </main>
     </div>
-    <div class="modal-backdrop hidden">
+    <!-- --------------------- Modals & Login --------------------- -->
+    <div class="modal-backdrop">
       <section class="modal-screen glass-card">
-        <svg class="hidden">
+        <svg class="modal-screen__del-icon hidden">
           <use href="#icon-del-form"></use>
         </svg>
         <h1 class="modal-screen__header">
           <!-- Load from js -->
         </h1>
+        <!-- --------------------- Modal Add & Edit & Form Login Body --------------------- -->
         <div class="modal-screen__body">
-          <form class="form" action="">
+          <!-- --------------------- Form Modals --------------------- -->
+          <form class="form hidden">
+            <!-- --------------------- Title --------------------- -->
             <div>
               <label for="form__title">عنوان کتاب</label>
               <p><span class="modal-screen__maxlength-title">0</span>/30</p>
@@ -278,7 +464,7 @@
               name="form__title"
               id="form__title"
             />
-
+            <!-- --------------------- Author --------------------- -->
             <div>
               <label for="form__author">نویسنده</label>
               <p><span class="modal-screen__maxlength-author">0</span>/30</p>
@@ -290,7 +476,7 @@
               name="form__author"
               id="form__author"
             />
-
+            <!-- --------------------- Status --------------------- -->
             <label for="form__status">وضعیت</label>
             <select
               class="glass-card"
@@ -302,7 +488,7 @@
               <option value="reading">درحال خواندن</option>
               <option value="done">خوانده شده</option>
             </select>
-
+            <!-- --------------------- Score --------------------- -->
             <label for="form__score">امتیاز</label>
             <input
               max="5"
@@ -315,20 +501,85 @@
               placeholder="امتیاز از 1 تا 5 "
             />
           </form>
+          <!-- --------------------- Form Login --------------------- -->
+          <form class="form-login">
+            <!-- --------------------- Username --------------------- -->
+            <label for="form-login__username">نام کاربری</label>
+            <div class="form-login__input">
+              <input
+                class="glass-card"
+                type="text"
+                name="form-login__username"
+                id="form-login__username"
+              />
+              <svg class="form-login__icon">
+                <use href="#icon-username"></use>
+              </svg>
+            </div>
+            <!-- --------------------- Password --------------------- -->
+            <label for="form-login__password">رمز عبور</label>
+            <div class="form-login__input">
+              <input
+                class="glass-card"
+                type="password"
+                name="form-login__password"
+                id="form-login__password"
+              />
+              <svg class="form-login__icon form-login__icon--toggle">
+                <use href="#icon-show"></use>
+                <!-- <use href="#icon-hidden"></use> -->
+              </svg>
+            </div>
+            <!-- --------------------- Email --------------------- -->
+            <label for="form-login__email">آدرس ایمیل</label>
+            <div class="form-login__input">
+              <input
+                class="glass-card"
+                type="text"
+                name="form-login__email"
+                id="form-login__email"
+              />
+              <svg class="form-login__icon">
+                <use href="#icon-email"></use>
+              </svg>
+            </div>
+            <!-- --------------------- Phone --------------------- -->
+            <label for="form-login__phone">شماره موبایل</label>
+            <div class="form-login__input">
+              <input
+                class="glass-card"
+                type="text"
+                name="form-login__phone"
+                id="form-login__phone"
+              />
+              <svg class="form-login__icon">
+                <use href="#icon-phone"></use>
+              </svg>
+            </div>
+          </form>
+          <!-- --------------------- Form Login Body --------------------- -->
+          <div class="login__body-text hidden">
+            <span>ورود با ایمیل</span>
+            <span>فراموشی رمز عبور</span>
+          </div>
+          <!-- --------------------- Modal del Book Body --------------------- -->
           <p class="modal-screen__body-text hidden">
             آیا مطمئن هستید که می‌خواهید این کتاب را حذف کنید؟
           </p>
         </div>
+        <!-- --------------------- Modals & Login Buttons --------------------- -->
         <div class="modal-screen__btns">
+          <button class="modal-screen__login-btn hidden">ورود</button>
           <button class="modal-screen__del-btn hidden">حذف</button>
           <button class="modal-screen__save-btn">ذخیره</button>
           <button class="modal-screen__cancel-btn">انصراف</button>
         </div>
       </section>
     </div>
+    <!-- --------------------- Toast Message --------------------- -->
     <section class="toast-container">
       <!-- Load From Js -->
     </section>
-    <!-- <script src="./js/app.js"></script> -->
+    <script src="./js/app.js"></script>
   </body>
 </html>
