fix: update modal visibility states and adjust toastContainer height

--- a/index.html
+++ b/index.html
@@ -440,7 +440,7 @@
       </main>
     </div>
     <!-- --------------------- Modals & Login --------------------- -->
-    <div class="modal-backdrop">
+    <div class="modal-backdrop hidden">
       <section class="modal-screen glass-card">
         <svg class="modal-screen__del-icon hidden">
           <use href="#icon-del-form"></use>
@@ -451,7 +451,7 @@
         <!-- --------------------- Modal Add & Edit & Form Login Body --------------------- -->
         <div class="modal-screen__body">
           <!-- --------------------- Form Modals --------------------- -->
-          <form class="form hidden">
+          <form class="form">
             <!-- --------------------- Title --------------------- -->
             <div>
               <label for="form__title">عنوان کتاب</label>
@@ -502,7 +502,7 @@
             />
           </form>
           <!-- --------------------- Form Login --------------------- -->
-          <form class="form-login">
+          <form class="form-login hidden">
             <!-- --------------------- Username --------------------- -->
             <label for="form-login__username">نام کاربری</label>
             <div class="form-login__input">
