Fix: Update login and signup button classes in main__auth-required - HTML: btn-login → main__btn-login, btn-signup → main__btn-signup - CSS: Update styles for new class names

--- a/index.html
+++ b/index.html
@@ -421,8 +421,8 @@
             دارید وارد شوید
           </h1>
           <div class="main__btns">
-            <button class="btn-login glass-card" type="button">ورود</button>
-            <button class="btn-signup glass-card" type="button">
+            <button class="main__btn-login glass-card" type="button">ورود</button>
+            <button class="main__btn-signup glass-card" type="button">
               ثبت‌ نام
             </button>
           </div>
